...

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/previous_step_button"
                        android:layout_toEndOf="@+id/previous_step_button"
                        android:layout_toLeftOf="@+id/next_step_button"
                        android:layout_toRightOf="@+id/previous_step_button"
                        android:layout_toStartOf="@+id/next_step_button"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/step_number"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/step_numbers_layout_margin"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:textSize="25sp"
...
