<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view_steps"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_layout_margin"
    android:clickable="true"
    app:cardCornerRadius="@dimen/corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/card_content_padding">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/steps_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</android.support.v7.widget.CardView>